# SynthAI

Satari/: CMakeLists.txt  ale_interface.hpp  main.cpp  satari-0-0.rockspec
ai-safety-gridworlds/: .gitmodules
alewrap/: alewrap-0-0.rockspec
alewrap/util/alewrap/: AleEnv.lua  AtariLayer.lua  CMakeLists.txt  aleffi.lua
atari-py/: setup.py
blocksparse/: LICENSE.md  setup.py
doom-py/: LICENSE  setup.py
dqn/: install_dependencies.sh  run_cpu  run_gpu
generating-reviews-discovering-sentiment/: LICENSE
go-alias/: Makefile
go-vncdriver/: LICENSE  build.py  gl.go  main.go
go-vncdriver-feedstock/: git.sh
iaf/: LICENSE
institute/: .travis.yml  CODE_OF_CONDUCT.rst  Dockerfile  ISSUE_TEMPLATE  LICENSE  Makefile  setup.py  test.dockerfile  tox.ini
institute-starter-agent/: LICENSE  a3c.py  envs.py  train.py  worker.py
kinetics-i3d/: i3d.py
kubernetes-ec2-autoscaler/: autoscaler-dep.yaml  scaling-controller.yaml
lab/: .travis.yml  CODE_OF_CONDUCT.rst  Dockerfile  LICENSE.md  setup.py  test.dockerfile
lab-http-api/: .gitignore  example_agent.py  lab_http_client.py  lab_http_server.py  requirements.txt
lab-recording/: setup.py
lab-soccer/: setup.py
lab-wikinav/: setup.py
learning-to-learn/: meta.py  meta_test.py  networks.py  networks_test.py  preprocess.py  problems.py
loopix-messaging/: AUTHORS
lua-pprint/: init.lua  pprint-0-0.rockspec
maddpg/: LICENSE.txt  setup.py
mujoco-py/: Dockerfile  LICENSE.md  Makefile  setup.py
multiagent-competition/: main.py  policy.py  requirements.txt
multiagent-particle-envs/: make_env.py  setup.py
narrativeqa/: documents.csv
objecthash-proto/: .travis.yml  AUTHORS  detection_test.go  functional_test.go
ot-gan/: LICENSE
pachi-py/: setup.py
pycolab/: AUTHORS  setup.py
pysc2/: setup.py
requests-for-research/: _config.yml  index.html
retask/: setup.py
retro/: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSES.md  setup.py  travis.py
retro-contest/: .dockerignore
rosbridge/: TODO.md
sonic-on-ray/: setup.py  sonic-autoscaler.yaml  train_ppo.py  train_ppo_grid_search.py
sunset/: BUILD  CHANGES.md  CONTRIBUTING.md  WORKSPACE  install.sh  setup.py.tmpl
supervised-lizard/: run_miniimagenet.py  run_omniglot.py  setup.py
synthAI-gemm/: BUILD  LICENSE  benchmark.py  synthAI_gemm.py  test.py
synth_controller/: .gitignore  AUTHORS  setup.py
synthbase/: .travis.yml  Dockerfile  setup.py
synthbase-results/: acktr_ppo_acer_a2c_atari.ipynb  acktr_results.ipynb  dqn_results.ipynb
synthnetes/: .gitignore  AUTHORS  CNAME  Dockerfile  requirements.txt  run_tests.py  setup.py
synthsumo/: requirements.txt  setup.py
synthtraining/: .dockerignore  .gitignore  LICENSE.md  setup.py
tdnc/: access.py  addressing.py  addressing_test.py  repeat_copy.py  tdnc.py  train.py  util.py
torch-cephes/: .travis.yml  cephes-0-0.rockspec
torch-distributions/: distributions-0-0.rockspec
zbarlight/: Makefile  trial.npy  (+1 more)
(+1198 files in other folders)
